voting-app/voting-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deployment
  labels:
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: voting-app
      app: demo-voting-app
  template:
    metadata:
      labels:
        name: voting-app
        app: demo-voting-app
    spec:
      containers:
        - name: voting-app
          image: kodekloud/examplevotingapp_worker:v2
          ports:
            - containerPort: 80
