voting-app/result-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-nodeport
  labels:
    name: result-service
    app: demo-voting-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005
  selector:
    name: result-app-pod
    app: demo-voting-app  
---
apiVersion: v1
kind: Service
metadata:
  name: result-clusterip
  labels:
    name: result-service
    app: demo-voting-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: result-app-pod
    app: demo-voting-app
