voting-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  defaultBackend:
        service:
          name: default-http-backend
          port:
            number: 80
  rules:
    - http:
        paths:
          - path: /voting
            pathType: Prefix
            backend:
              service: 
                name: voting-clusterip
                port:
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result-clusterip
                port:
                  number: 80
